# squirrel_planning

./: .gitignore  .travis.rosinstall  .travis.yml  README.md
knowledge_base/: CMakeLists.txt  (+1 more)
planning/: package.xml
planning_system/: CMakeLists.txt  package.xml
planning_system/data/: domain.pddl  domain_squirrel.pddl
planning_system/launch/: planning_system.launch
planning_system/model/: planning_system.ros_package  planning_system.ros_package_diagram
planning_system/squirrel/: ExploreAction.cpp  PlanningVis.cpp  PushAction.cpp  perceptionInterface.cpp  perceptionInterface.h
planning_system/src/: PDDLProblemGenerator.cpp  PlanningEnvironment.h  PlanningLoop.cpp  PostProcess.cpp
planning_system/src/VALfiles/: Validator.cpp  Validator.jcc  Validator.jst  Validator.jup  parser  pddl+.cpp  pddl+.yacc  pddl+.yacc~  ptree.cpp  ptree.h
planning_system/src/util/: PlanVisualisation.cpp  TestHarness.cpp
squirrel_interface_emote/: CMakeLists.txt  package.xml
squirrel_interface_emote/include/squirrel_interface_emote/: RPEmoteAction.h
squirrel_interface_emote/src/: RPEmoteAction.cpp
squirrel_interface_manipulation/: CMakeLists.txt  package.xml
squirrel_interface_manipulation/include/squirrel_interface_manipulation/: RPGraspAction.h  RPHandoverAction.h  RPPushAction.h
squirrel_interface_manipulation/src/: RPGraspAction.cpp  RPHandoverAction.cpp  RPPushAction.cpp
squirrel_interface_perception/: CMakeLists.txt  package.xml
squirrel_interface_perception/include/squirrel_interface_perception/: RPCameraControl.h  RPObjectPerception.h  RPPerceptionAction.h
squirrel_interface_perception/src/: RPCameraControl.cpp  RPObjectPerception.cpp  RPPerceptionAction.cpp
squirrel_interface_speech/: CMakeLists.txt  package.xml
squirrel_interface_speech/include/squirrel_interface_speech/: RPSpeechAction.h  VADSpeechAction.h
squirrel_interface_speech/src/: RPSpeechAction.cpp  VADSpeechInterface.cpp
squirrel_knowledge_base/: CMakeLists.txt  package.xml
squirrel_knowledge_base/include/squirrel_knowledge_base/: KnowledgeBase.h  RPObjectPerception.h  RPRoadmapServer.h
squirrel_knowledge_base/src/: KnowledgeBase.cpp  PlanningFilter.cpp  TestHarness.cpp
squirrel_knowledge_base/src/rpobjectperception/: RPObjectPerception.cpp
squirrel_knowledge_base/src/rproadmap/: RPRoadmapServer.cpp  RPRoadmapVisualization.cpp
squirrel_knowledge_base/test/: test_launch.launch  utest.cpp
squirrel_planning/: CMakeLists.txt  package.xml
squirrel_planning_execution/: CMakeLists.txt  package.xml
squirrel_planning_execution/conf/: year3-VPI-20170308.conf  year3-VPI1-20170308.conf  year3-VPI2-20170308.conf  year3-VPI3-20170308.conf  year3-scenario1-GH25.conf  year3-scenario1-freiburg.conf  year3-scenario1-freiburg2.conf
squirrel_planning_execution/include/squirrel_planning_execution/: ClassicalTidyPDDLGenerator.h  ContingentPDDLGenerator.h  ContingentStrategicClassifyPDDLGenerator.h  ContingentTacticalClassifyPDDLGenerator.h  ContingentTidyPDDLGenerator.h  LookForObjectsGraspTest.h  PlanToAskPDDLGenerator.h  PlanToSensePDDLGenerator.h  RPSquirrelRecursion.h  RPSquirrelRoadmap.h  RecommenderSystem.h  ShortDemo.h  SortingGame.h  StringUtilityFunctions.h  TidyRoomGrasping.h  ViewConeGenerator.h
squirrel_planning_execution/scripts/: grasp_setup.sh
squirrel_planning_execution/src/: ClassicalTidyPDDLGenerator.cpp  ContingentPDDLGenerator.cpp  ContingentStrategicClassifyPDDLGenerator.cpp  ContingentTacticalClassifyPDDLGenerator.cpp  ContingentTidyPDDLGenerator.cpp  LookForObjectsGraspTest.cpp  PlanToAskPDDLGenerator.cpp  PlanToSensePDDLGenerator.cpp  RPSimpleMapVisualization.cpp  RPSquirrelRecursion.cpp  RPSquirrelRoadmap.cpp  RecommenderSystem.cpp  RobotKnowsGame.cpp  ShortDemo.cpp  SimulatedPDDLActionsNode.cpp  SortingGame.cpp  SpeechSimulator.cpp  TidyRoom.cpp  TidyRoomGrasping.cpp  ViewConeGenerator.cpp
squirrel_planning_launch/: CMakeLists.txt  package.xml
squirrel_planning_launch/common/: ask_plan.pddl  domain.pddl  domain_ask.pddl  domain_explore.pddl  domain_push.pddl  domain_sense.pddl  domain_squirrel.pddl  explore_area_domain-nt.pddl  grasp_setup.sh  grasping_domain-nt.pddl  robot_knows_phase1.pddl  robot_knows_phase3.pddl  robot_knows_plan.pddl  scenario2_toy.db  scenario2_toy2.db  sense_plan.pddl  sorting_game_domain.pddl  sorting_game_plan.pddl  template_robot_knows_domain.pddl  test_grasp_plan.pddl  tidy_room_domain-nt.pddl  waypoints_sorting_game.txt
squirrel_planning_launch/launch/: find_toys_experiment_2016.launch  grasp.launch  interfaced_planning_system.launch  run_find_toys_2016_experiment_planning.launch  run_find_toys_experiment_2016_planning.launch  squirrel_planning_contingent.launch  squirrel_planning_db.launch  squirrel_planning_exploration.launch  squirrel_planning_grasping.launch  squirrel_planning_hardware.launch  squirrel_planning_perception.launch  squirrel_planning_review1.launch  squirrel_planning_robot_knows.launch  squirrel_planning_robot_knows_VPI.launch  squirrel_planning_simulation.launch  squirrel_planning_sorting_game.launch  squirrel_planning_system.launch  squirrel_planning_test_exploration.launch  squirrel_planning_test_grasping.launch  squirrel_planning_test_grasping_start_planner.launch  squirrel_planning_test_perception.launch  squirrel_planning_test_perception_grasping.launch  squirrel_planning_test_recommender.launch
squirrel_planning_system/: CMakeLists.txt  package.xml
squirrel_planning_system/common/: domain_push.pddl
squirrel_planning_system/include/: PlanningEnvironment.h
squirrel_planning_system/launch/: planning_system.launch  simple_planning_system.launch  squirrel_knowledge.launch  squirrel_planning_system.launch
squirrel_planning_system/src/: ActionFeedback.cpp  PDDLProblemGenerator.cpp  PlanningEnvironment.h  PlanningLoop.cpp  PostProcess.cpp
squirrel_planning_system/test/: test_launch.launch  utRPMoveBase.cpp  utest.cpp
squirrel_recommender/: CMakeLists.txt  README  package.xml
squirrel_recommender/launch/: rosplan_recommender.launch
squirrel_recommender/src/: RPRecommender.cpp  RecommenderNode.cpp
(+159 files in other folders)
