<?xml version="1.0"?>
<package>
	<name>planning</name>
	<version>0.0.0</version>
	<description>The planning package for SQUIRREL</description>
	<maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
	<license>BSD</license>
  
	<buildtool_depend>catkin</buildtool_depend>

	<run_depend>planning_system</run_depend>
	<run_depend>knowledge_base</run_depend>

	<export>
		<metapackage/>
	</export>

</package>
