<?xml version="1.0"?>
<package>
  <name>squirrel_interface_emote</name>
  <version>0.0.0</version>
  <description>ROSPlan interface for the SQUIRREL expression package.</description>
  <maintainer email="bram.ridder@gmail.com">Bram Ridder</maintainer>
  <license>BSD</license>
  <url type="website">http://www.squirrel-project.eu/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosplan_knowledge_msgs</build_depend>
  <build_depend>rosplan_dispatch_msgs</build_depend>
  <build_depend>squirrel_expression</build_depend>
  <build_depend>squirrel_hri_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>rosplan_knowledge_msgs</run_depend>
  <run_depend>rosplan_dispatch_msgs</run_depend>
  <run_depend>squirrel_speech_msgs</run_depend>
  <run_depend>squirrel_expression</run_depend>
  <run_depend>squirrel_hri_msgs</run_depend>

  <export></export>
</package>
