<package>
<name>squirrel_planning</name>
<version>0.0.0</version>
<description>Planning package for SQUIRREL</description>
<maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
<license>BSD</license>
<buildtool_depend>catkin</buildtool_depend>
<run_depend>rosplan_planning_system</run_depend>
<run_depend>rosplan_knowledge_base</run_depend>
<run_depend>rosplan_interface_movebase</run_depend>
<run_depend>rosplan_interface_mapping</run_depend>
<run_depend>squirrel_interface_hri</run_depend>
<run_depend>squirrel_interface_manipulation</run_depend>
<run_depend>squirrel_interface_perception</run_depend>
<export>
<metapackage/>
</export>
</package>
