<?xml version="1.0"?>
<package>
	<name>squirrel_planning</name>
	<version>0.0.0</version>
	<description>Planning package for SQUIRREL</description>
	<maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
	<license>BSD</license>
  
	<buildtool_depend>catkin</buildtool_depend>

	<run_depend>squirrel_interface_hri</run_depend>
	<run_depend>squirrel_inteface_manipulation</run_depend>
	<run_depend>squirrel_inteface_perception</run_depend>
	<run_depend>squirrel_planning_execution</run_depend>
	<run_depend>squirrel_planning_launch</run_depend>

	<export>
		<metapackage/>
	</export>

</package>
