<?xml version="1.0"?>
<package>
  <name>squirrel_planning_launch</name>
  <version>0.0.0</version>
  <description>Launch and configuration files for the SQUIRREL ROSPlan system.</description>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <license>BSD</license>
  <url type="website">http://www.squirrel-project.eu/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
